Fix dead code, add real format/lint, apply google-java-format
- Remove dead variable maxSizeLong from ListGenerator.generateCompositional
- Fix README code blocks: use distinct variable names (no redeclarations)
- Add fmt-maven-plugin (google-java-format) to pom.xml; fmt:check runs
  during mvn verify so just check now enforces code formatting
- Add real 'format' and 'lint' targets to justfile
- Apply google-java-format to all 38 source files (2-space indent,
  Google Java Style)

just check now enforces: format compliance + 100% coverage + 218 tests.
just lint checks format only.
just format auto-fixes formatting.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>